Fixed bug #76534 (PHP hangs on 'illegal string offset on string references with an error handler)