Zend/zend_execute.c
@@ -1700,7 +1700,9 @@ fetch_from_array:
 			zend_throw_error(NULL, "[] operator not supported for strings");
 		} else {
 			zend_check_string_offset(dim, type);
-			zend_wrong_string_offset();
+			if (EXPECTED(EG(exception) == NULL)) {
+				zend_wrong_string_offset();
+			}
 		}
 		ZVAL_ERROR(result);
 	} else if (EXPECTED(Z_TYPE_P(container) == IS_OBJECT)) {
